Fixes collapsed member visibility
The color of the elements inside the collapsed members was not set correctly

--- a/styles/main.less
+++ b/styles/main.less
@@ -96,6 +96,10 @@ code {
 .member-collapsed {
   background-color : @navbar-inverse-bg;
   color            : @navbar-inverse-color;
+	
+  span, h4, a{
+    color: @navbar-inverse-color;  
+  }
 }
 
 .member-open {
